# NGE_Scheduler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
core/: NGE_Scheduler.c  NGE_Scheduler.h  NewType.h  app_tasks.c  app_tasks.h  utility_macros.h
docs/: architecture.md  misra_deviations.md  porting_guide.md
infineon_tc3xx/bsp/: bsp.c
ports/infineon_tc3xx/: main.c
ports/infineon_tc3xx/bsp/: bsp.h
ports/microchip_pic32/: main.c
ports/microchip_pic32/bsp/: bsp.c  bsp.h
ports/nxp_s32k3xx/: main.c
ports/nxp_s32k3xx/bsp/: bsp.c  bsp.h
ports/renesas_rh850/: main.c
ports/renesas_rh850/bsp/: bsp.c  bsp.h
ports/renesas_rl78/: main.c
ports/renesas_rl78/bsp/: bsp.c  bsp.h
ports/rp2040/: CMakeLists.txt  main.c
ports/rp2040/bsp/: bsp.c  bsp.h
ports/st_stm32/: main.c
ports/st_stm32/bsp/: bsp.c  bsp.h
ports/ti_tms570/: main.c
ports/ti_tms570/bsp/: bsp.c  bsp.h
ports/x86_linux/: main.c
ports/x86_linux/bsp/: bsp.c  bsp.h
ports/x86_windows/: main.c
ports/x86_windows/bsp/: bsp.c  bsp.h
